Add user products relationship, where user can have many product